--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type='module' src="https://broadwayinc.dev/jslib/skateui/0.1.93/skateui/skateui.esm.js"></script>
+    <script type='module' src="https://broadwayinc.dev/jslib/skateui/0.1.93/skateui.esm.js"></script>
     <title>broadway Inc.</title>
   </head>
   <body>
