--- a/pp/skapi.html
+++ b/pp/skapi.html
@@ -230,5 +230,7 @@
     body {
         margin: auto;
         max-width: 1000px;
+        padding: 8px;
+        box-sizing: border-box;
     }
 </style>
