--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Hi, We are
 </p>
 <h2>What We've Built</h2>
 <p>
-  Introducing <a href="https://www.skapi.com">Skapi</a>: A Backend API Library Designed for Frontend Developers.
+  Introducing Skapi: A Backend API Library Designed for Frontend Developers.
   <br>
   Skapi is a versatile JavaScript library enabling you to create full-stack web applications straight from your HTML
   code.
@@ -37,7 +37,7 @@ Hi, We are
 </p>
 <h2>Discover Skapi</h2>
 <p>
-  Learn more and start building at <a href="https://www.skapi.com">www.skapi.com</a>.
+  Learn more and start building at <a href="https://www.skapi.com" target="_blank">www.skapi.com</a>.
 </p>
 <h2>Our Location</h2>
 <p>
