--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="style.css">
 <script src="https://cdn.jsdelivr.net/npm/skapi-js@latest/dist/skapi.js"></script>
+<script src="util.js"></script>
 <script>
   const skapi = new Skapi("ap220VneiKiyIzgLeFEc", "f8e16604-69e4-451c-9d90-4410f801c006");
 </script>
@@ -58,17 +59,7 @@ Hi, We are
   <p>
     Be the first to know about our new services, updates, and special offers.
   </p>
-  <form onsubmit="disableAllForms();skapi.subscribeNewsletter(event).then(res => alert(res.split(': ').slice(-1)))">
-    <script>
-      let disableAllForms = () => {
-        document.querySelectorAll('form').forEach(form => {
-          form.querySelectorAll('input').forEach(input => {
-            input.disabled = true;
-          })
-        })
-      }
-    </script>
-    
+  <form onsubmit="disableForm(this);skapi.subscribeNewsletter(event).then(res => alert(res.split(': ').slice(-1)))">
     <input hidden name="redirect" value="/ns-subscribed.html" />
     <input hidden name="group" value="public" />
 
