added privacy policy

--- a/admin/index.html
+++ b/admin/index.html
@@ -20,6 +20,9 @@
             <li>
                 <a href="/admin/deploy.html">Deploy Website</a>
             </li>
+            <li>
+                <a href="/pp/skapi.html">Privacy Policy</a>
+            </li>
         </ul>
     </div>
 </div>
