--- a/pp/skapi.html
+++ b/pp/skapi.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="../style.css">
 <h1>Privacy Policy</h1>
-<p>Last updated: January 05, 2024</p>
+<p>Last updated: January 08, 2024</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information
     when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and
@@ -201,11 +201,10 @@
     or method of electronic storage is 100% secure. While We strive to use commercially acceptable means to protect Your
     Personal Data, We cannot guarantee its absolute security.</p>
 <h2>Children's Privacy</h2>
-<p>Our Service does not address anyone under the age of 13. We do not knowingly collect personally identifiable
-    information from anyone under the age of 13. If You are a parent or guardian and You are aware that Your child has
-    provided Us with Personal Data, please contact Us. If We become aware that We have collected Personal Data from
-    anyone under the age of 13 without verification of parental consent, We take steps to remove that information from
-    Our servers.</p>
+<p>We do not knowingly collect personally identifiable information from anyone under the age of 13. If You are a parent
+    or guardian and You are aware that Your child has provided Us with Personal Data, please contact Us. If We become
+    aware that We have collected Personal Data from anyone under the age of 13 without verification of parental consent,
+    We take steps to remove that information from our servers.</p>
 <p>If We need to rely on consent as a legal basis for processing Your information and Your country requires consent from
     a parent, We may require Your parent's consent before We collect and use that information.</p>
 <h2>Links to Other Websites</h2>
