--- a/index.html
+++ b/index.html
@@ -1,58 +1,139 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="stylesheet" href="style.css">
 <script src="https://cdn.jsdelivr.net/npm/skapi-js@latest/dist/skapi.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-init-css@latest/init.css">
+<link rel="stylesheet" href="style.css">
 <script src="util.js"></script>
 <script>
   const skapi = new Skapi("ap220VneiKiyIzgLeFEc", "f8e16604-69e4-451c-9d90-4410f801c006");
 </script>
 
 <br>
-Hi, We are
-<h1 style="margin-top: 0;">broadway Inc.</h1>
+<br>
+
+broadway Inc.
+
+<h1>Complexity of Modern Web Development</h1>
+
 <p>
-  At Broadway Inc., we specialize in creating backend web services.
+  Web development was once straightforward: code a server, deploy it, and let it interact directly with users.
+  Everything, including code, data, and files, was centralized.
+
   <br>
-  Our mission is centered around simplicity and efficiency,
-  aiming to make backend technology accessible and user-friendly for a wide range of users.
-</p>
-<h2>What We've Built</h2>
-<p>
-  Introducing Skapi: A Backend API Library Designed for Frontend Developers.
   <br>
-  Skapi is a versatile JavaScript library enabling you to create full-stack web applications straight from your HTML
-  code.
-  Say goodbye to the complexities of configuration, database design, and server deployment.
-  Skapi simplifies your development process, allowing you to focus on what you do best.
-</p>
-<h2>How It Works</h2>
-<p>
-  Integrate Skapi into your HTML, and you're instantly connected to our robust backend services.
+
+  However, the landscape has drastically changed. The advent of cloud computing, no-code/low-code solutions, and a
+  variety of frameworks was meant to streamline development. Ironically, this evolution introduced more complexity.
+  Developers are now faced with navigating through multiple frameworks, dealing with complex server configurations, and
+  often requiring expert intervention during deployment.
+
   <br>
-  Skapi provides a comprehensive range of features – from CDN, databases, and email servers to storage and real-time
-  data,
-  all readily available and simple to use. By managing the backend intricacies, Skapi lets you concentrate on
-  crafting a dynamic frontend. Built on modern web technologies and AWS serverless infrastructure, Skapi not only
-  ensures the data security and safety but also scales seamlessly alongside your application’s growth.
+  <br>
+
+  At Broadway Inc., we've envisioned a different approach – one that simplifies solutions in modern web development
+  without compromising capabilities.
 </p>
-<h2>Discover Skapi</h2>
+<br>
+<h2>
+  Back to Basics with HTML
+</h2>
 <p>
-  Learn more and start building at <a href="https://www.skapi.com" target="_blank">www.skapi.com</a>.
+  A website works best when it's built with static HTML. These days, there are many cloud services available to host your
+  HTML, and modern browsers can easily handle complex JavaScript code.
+  <br>
+  <br>
+  So, we don't really need servers to render HTML anymore. 
+  We are living in an age where we have tons of SPA frameworks to do that, yet we still see a lot flocking back to SSR
+  using SPA frameworks, making it no different than PHP.
+  This is mainly because, even though we've made a lot of improvements on the frontend, the backend hasn't changed much.
+  <br>
+  <br>
+  We want to change that.
+  <br>
+  <br>
+  We plan to use the power of modern browsers and new backend technologies to make dynamic web applications work well,
+  even when they are hosted on simple, static HTML.
 </p>
-<h2>Our Location</h2>
+
+<h4>
+  Embracing Serverless Technologies
+</h4>
+
 <p>
-  Visit us at 101-3302, 109 Mapo-daero, Mapo-gu, Seoul, 04146, Republic of Korea
+  We distilled backend servers only to their essence: serving user requests securely and efficiently.
+  By harnessing serverless technologies, we can do this while eliminating the need for conventional server management.
 </p>
-<h2>Founder</h2>
+
+<h4>
+  Leveraging Existing Cloud Services
+</h4>
+
 <p>
-  Baksa Gimm
+  Many cloud services have already solved numerous problems in modern web development.
+  The real challenge was integrating these services into a usable server.
+  We've simplified this by connecting these services with serverless lambda functions, thus freeing
+  developers from the complexities of cloud service configurations.
+</p>
+
+<h4>
+  Redefining the Database
+</h4>
+
+<p>
+  Traditional databases often come with complex designs, strict security measures, and detailed indexing strategies.
+  <br>
+  <br>
+  We're changing this paradigm by introducing a user-centric database model.
+  <br>
+  <br>
+  Based on key-value stores and advanced techniques using lexicographical sorting, we've made it possible for users to
+  determine their data structures, security levels, and indexing of their data.
+  <br>
+  <br>
+  We believe the user is the owner of their data, and should be the
+  one to decide how their data should be stored and accessed. This shift removes the prerequisite of designing database
+  schemas from the backend, also assuring security and flexibility with high performance.
+</p>
+
+<br>
+
+<h2>Introducing Skapi: Backend API Library for Frontend HTML</h2>
+
+<p>
+  Meet Skapi, your Serverless API solution for building web services.
+  The versatile JavaScript library let's you build full-stack web applications directly from your HTML.
+  <br>
+  <br>
+  Farewell to the complexities of configuration, database design, and server deployment.
+  Skapi streamlines your development, letting you focus solely on building.
+  <br>
+  <br>
+  Skapi offers a full spectrum of features, from user security and CDN to databases, email servers, storage, and
+  real-time data – all readily accessible from your frontend.
+  <br>
+  <br>
+  Compatible with vanilla HTML and various frontend frameworks, Skapi ensures that your HTML and JavaScript are all you
+  need to construct your web service.
+</p>
+<p>
+  Discover Skapi at <a href="https://www.skapi.com" target="_blank">www.skapi.com</a>.
+</p>
+<br>
+<p>
+  Baksa Gimm - Founder
   <br>
   Find me on <a href="https://twitter.com/baksagimm" target="_blank">X</a> | <a
     href="https://www.linkedin.com/in/baksa-gimm-94122877/" target="_blank">LinkedIn</a> | <a
     href="https://www.instagram.com/baksagimm" target="_blank">Instagram</a>
   <br>
 </p>
+<p>
+  broadway Inc.
+  <br>
+  <small>Location: 101-3302, 109 Mapo-daero, Mapo-gu, Seoul, 04146, Republic of Korea</small>
+</p>
+
 <hr>
 <div id="newsletter">
   <h2>Subscribe to our Newsletter</h2>
@@ -94,5 +175,9 @@ Hi, We are
 
   .input-field {
     margin-bottom: 8px;
+  }
+
+  ol {
+    padding-left: 1em;
   }
 </style>
