fix landing page

--- a/index.html
+++ b/index.html
@@ -39,21 +39,22 @@ broadway Inc.
   Back to Basics with HTML
 </h2>
 <p>
-  A website works best when it's built with static HTML. These days, there are many cloud services available to host your
-  HTML, and modern browsers can easily handle complex JavaScript code.
+  Websites work best when they're built with static HTML. Nowadays, lots of cloud services let you host your HTML, and
+  modern browsers are great at running complex JavaScript code.
   <br>
   <br>
-  So, we don't really need servers to render HTML anymore. 
+  Hence, it seems we don't really need servers to render HTML anymore.
   We are living in an age where we have tons of SPA frameworks to do that, yet we still see a lot flocking back to SSR
   using SPA frameworks, making it no different than PHP.
-  This is mainly because, even though we've made a lot of improvements on the frontend, the backend hasn't changed much.
+  This trend persists mainly because, despite significant advancements on the frontend, the approach to structuring
+  backend servers hasn't changed much.
   <br>
   <br>
   We want to change that.
   <br>
   <br>
-  We plan to use the power of modern browsers and new backend technologies to make dynamic web applications work well,
-  even when they are hosted on simple, static HTML.
+  By reimagining how backend servers are constructed, we seek to simplify the development of modern web applications,
+  even if they are meant to be hosted on simple, static HTML.
 </p>
 
 <h4>
@@ -72,7 +73,7 @@ broadway Inc.
 <p>
   Many cloud services have already solved numerous problems in modern web development.
   The real challenge was integrating these services into a usable server.
-  We've simplified this by connecting these services with serverless lambda functions, thus freeing
+  We've simplified this by joining all these services together with serverless lambda functions, thus freeing
   developers from the complexities of cloud service configurations.
 </p>
 
@@ -101,20 +102,21 @@ broadway Inc.
 <h2>Introducing Skapi: Backend API Library for Frontend HTML</h2>
 
 <p>
-  Meet Skapi, your Serverless API solution for building web services.
-  The versatile JavaScript library let's you build full-stack web applications directly from your HTML.
+  In alignment with our vision, we have developed Skapi, a frontend JavaScript library that connects you to our robust
+  serverless API solutions. Skapi empowers you to create full-stack web applications directly within your HTML
+  environment.
   <br>
   <br>
-  Farewell to the complexities of configuration, database design, and server deployment.
+  Say goodbye to the complexities of configuration, database design, and server deployment.
   Skapi streamlines your development, letting you focus solely on building.
   <br>
   <br>
-  Skapi offers a full spectrum of features, from user security and CDN to databases, email servers, storage, and
-  real-time data – all readily accessible from your frontend.
+  Skapi comes packed with a comprehensive array of features, including user security, CDN, databases, email servers,
+  file storage, real-time data, and much more – all integrated seamlessly and accessible directly from your frontend.
   <br>
   <br>
-  Compatible with vanilla HTML and various frontend frameworks, Skapi ensures that your HTML and JavaScript are all you
-  need to construct your web service.
+  Compatible with vanilla HTML and various frontend frameworks, Skapi guarantees that your HTML and JavaScript are the
+  only tools required to develop a sophisticated and robust web service.
 </p>
 <p>
   Discover Skapi at <a href="https://www.skapi.com" target="_blank">www.skapi.com</a>.
