--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ broadway Inc.
   We want to change that.
   <br>
   <br>
-  By reimagining how backend servers are constructed, we seek to simplify the development of modern web applications,
-  even if they are meant to be hosted on simple, static HTML.
+  By reimagining how backend servers are constructed, we seek to simplify the process of web development,
+  even for those based on static HTML.
 </p>
 
 <h4>
@@ -73,8 +73,8 @@ broadway Inc.
 <p>
   Many cloud services have already solved numerous problems in modern web development.
   The real challenge was integrating these services into a usable server.
-  We've simplified this by joining all these services together with serverless lambda functions, thus freeing
-  developers from the complexities of cloud service configurations.
+  We've streamlined this process by interconnecting these services using serverless lambda functions,
+  freeing developers from the complexities of cloud service configurations.
 </p>
 
 <h4>
