--- a/admin/users.html
+++ b/admin/users.html
@@ -4,71 +4,56 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-init-css@latest/init.css">
 <link rel="stylesheet" href="../style.css">
 <script src="https://cdn.jsdelivr.net/npm/skapi-js@latest/dist/skapi.js"></script>
+<script src="../util.js"></script>
 
 <script>
     const skapi = new Skapi("ap220VneiKiyIzgLeFEc", "f8e16604-69e4-451c-9d90-4410f801c006");
 </script>
-<div id="main">
-    <div id="info" hidden style="padding: 0">
-        <div style="display: flex; align-items: center; justify-content: space-between;">
-            <h2 style="margin: 0;">User List</h2>
-            <a style='margin: 0;' href="/admin/index.html">Back to Menu</a>
-        </div>
-        <hr>
-        <div class="table-container">
-            <table id="userdata">
-                <tr>
-                    <th>email_admin</th>
-                    <th>active_services</th>
-                    <th>email_verified</th>
-                    <th>approved</th>
-                    <th>locale</th>
-                    <th>user_id</th>
-                    <th>access_group</th>
-                </tr>
-            </table>
-        </div>
-        <div style="text-align: center;">
-            <span class="input-field" style="margin-top:8px;background-color: transparent;">
-                <button onclick='listUsers()' disabled>Show More</button>
-            </span>
-        </div>
+<h1 style='margin:0;line-height: 0;text-align: center;' id="loading"></h1>
+<main id="info" hidden>
+    <div style="display: flex; align-items: center; justify-content: space-between;">
+        <h2 >User List</h2>
+        <a href="/admin/index.html">Back</a>
     </div>
-    <h1 style='margin:0;line-height: 0;text-align: center;' id="loading"></h1>
-</div>
+    <hr>
+    <div class="table-container">
+        <table id="userdata">
+            <tr>
+                <th>email_admin</th>
+                <th>active_services</th>
+                <th>email_verified</th>
+                <th>approved</th>
+                <th>locale</th>
+                <th>user_id</th>
+                <th>access_group</th>
+                <style>
+                    th {
+                        font-weight: bold;
+                        padding: 4px;
+                    }
+                </style>
+            </tr>
+        </table>
+    </div>
+    <br>
+    <div style="text-align: center;">
+        <span class="input-field" style="margin-top:8px;background-color: transparent;">
+            <button onclick='listUsers()' disabled>Show More</button>
+        </span>
+    </div>
+</main>
 <script>
-    // loading...
-    let intervalId;
-    function loader() {
-        document.getElementById('loading').hidden = false;
-        let text_array = [".", "..", "...", ""];
-        let loading_text = document.getElementById("loading");
-        let index = 0;
-
-        intervalId = setInterval(() => {
-            loading_text.textContent = text_array[index];
-            index = (index + 1) % text_array.length;
-        }, 250);
-    }
-
-
     skapi.getProfile().then(u => {
         if (!u) {
             window.location.href = "/admin/login.html";
         }
     })
 
-    function completeLoading() {
-        clearInterval(intervalId);
-        document.getElementById('loading').hidden = true;
-        document.getElementById('loading').innerHTML = "";
-        document.getElementById("info").hidden = false;
-    }
-
     let more = null;
+    let loading_el = document.getElementById('loading');
 
     function listUsers() {
-        loader();
+        runLoader(loading_el);
         document.querySelector('#info button').disabled = true;
 
         return skapi.secureRequest({
@@ -99,7 +84,8 @@
                 }
             }
         }).finally(() => {
-            completeLoading();
+            stopLoader(loading_el);
+            document.getElementById("info").hidden = false;
             if (more) {
                 document.querySelector('#info button').disabled = false;
             } else {
@@ -112,35 +98,12 @@
 
 </script>
 <style>
-    #main {
-        max-width: 1440px;
-        margin: auto;
-        padding: 4rem 0;
-    }
-
-    h2 {
-        margin-bottom: 8px;
-    }
-
-    strong {
-        font-weight: 400;
-    }
-
-    h4 {
-        margin: 0;
-    }
-
-    table {
-        width: 100%;
+    main {
+        max-width: 100%;
     }
 
     tr:nth-child(even) {
         background-color: rgba(0, 0, 0, 0.05);
-    }
-
-    th {
-        font-weight: 400;
-        padding: 4px;
     }
 
     td {
@@ -149,7 +112,6 @@
     }
 
     .table-container {
-        max-width: 100%;
         overflow-x: auto;
     }
 </style>
