--- a/admin/change-password.html
+++ b/admin/change-password.html
@@ -4,32 +4,35 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-init-css@latest/init.css">
 <link rel="stylesheet" href="../style.css">
 <script src="https://cdn.jsdelivr.net/npm/skapi-js@latest/dist/skapi.js"></script>
-
 <script src="../util.js"></script>
 <script>
     const skapi = new Skapi("ap220VneiKiyIzgLeFEc", "f8e16604-69e4-451c-9d90-4410f801c006");
 </script>
+
 <main>
-    <h2>Login</h2>
+    <div style="display: flex; align-items: center; justify-content: space-between;">
+        <h2>Change Password</h2>
+        <a href="/admin/index.html">Back</a>
+    </div>
     <hr>
     <form action="/admin/index.html" onsubmit="
             document.getElementById('msg').textContent = '&nbsp;';
             disableForm(this);
-            skapi.login(event).catch(err=>{
+            skapi.changePassword(event).then(r=>alert('Your password has been changed.')).catch(err=>{
                 document.getElementById('msg').textContent = err.message;
                 enableForm(this);
             })">
 
         <label>
-            <small>Email</small>
+            <small>Current Password</small>
             <br>
-            <input type="email" name="email" placeholder='your@email.com' required />
+            <input name="current_password" type='password' placeholder='Current Password' required />
         </label>
 
         <label>
-            <small>Password</small>
+            <small>New Password</small>
             <br>
-            <input type="password" name="password" placeholder='Password' required />
+            <input name="new_password" type="password" placeholder='New Password' required />
         </label>
 
         <div>
@@ -37,14 +40,14 @@
         </div>
 
         <div>
-            <input style="float: right;" type="submit" value="Login" />
+            <input style="float: right;" type="submit" value="Change" />
         </div>
 
     </form>
 </main>
 <script>
     skapi.getProfile().then(u => {
-        if (u) {
+        if (!u) {
             window.location.href = "/admin/index.html";
         }
     });
