--- a/admin/tickets.html
+++ b/admin/tickets.html
@@ -9,12 +9,9 @@
     const skapi = new Skapi("ap212Oua4WPuUkTTxckv", "4d4a36a5-b318-4093-92ae-7cf11feae989", {autoLogin: true}, {"hostDomain": "skapi.app", "target_cdn": "d1wrj5ymxrt2ir"});
 </script>
 
-<br>
-<br>
-
 <div style="display: flex; align-items: center; justify-content: space-between;">
-    <h2 style="margin: 0;">Tickets</h2>
-    <a style='margin: 0;' href="/admin/index.html">Back to Menu</a>
+    <h2>Tickets</h2>
+    <a href="/admin/index.html">Back</a>
 </div>
 <hr>
 <p>
@@ -33,8 +30,11 @@
     <li>51: Free Standard</li>
 </ul>
 </p>
-<hr>
+
+<br>
+
 <h2>Register Tickets</h2>
+<hr>
 <form onsubmit="registerTicket(event)">
     <table id="reg_form">
         <style>
@@ -92,47 +92,74 @@
         </tr>
     </table>
 </form>
-<hr>
+
+<br>
+
 <h2>Registered Tickets</h2>
+<hr>
 <div id="list_wrap">
     <style>
         #list_wrap {
             overflow-x: auto;
-            max-width: 100%;
             white-space: nowrap;
         }
 
-        #registered_tickets {
+        .tickets {
             text-align: left;
         }
 
-        #registered_tickets tr:nth-child(even) {
+        .tickets td {
+            padding: 4px;
+        }
+
+        .tickets tr:nth-child(even) {
             background-color: rgba(0, 0, 0, 0.05);
         }
-
-        #registered_tickets th {
-            font-weight: 400;
-            padding: 4px;
-        }
-
-        #registered_tickets td {
-            padding: 4px;
-            white-space: pre;
-        }
     </style>
-    <table id="registered_tickets">
+    <table class='tickets' id="registered_tickets">
         <tr>
-            <th></th>
+            <th>-</th>
+            <th>-</th>
             <th>Ticket ID</th>
             <th>Description</th>
             <th>Service Group</th>
             <th>Request Authorization</th>
+            <style>
+                th {
+                    font-weight: bold;
+                    padding: 4px;
+                }
+            </style>
+        </tr>
+    </table>
+</div>
+<br>
+
+<h2>Consumed Tickets</h2>
+<hr>
+<div id="list_wrap">
+    <style>
+        #list_wrap {
+            overflow-x: auto;
+            white-space: nowrap;
+        }
+
+        th {
+            font-weight: bold;
+            padding: 4px;
+        }
+    </style>
+    <table class='tickets' id="consumed_tickets">
+        <tr>
+            <th>Time</th>
+            <th>User</th>
+            <th>Service</th>
+            <th>Subscription</th>
         </tr>
     </table>
 </div>
 <br>
 <br>
-
 <script>
     skapi.getProfile().then(u => console.log(u));
 
@@ -148,6 +175,7 @@
             let ticket_id = t.ticket_id;
             let row = /*html*/`
                 <td><button onclick="delete_ticket('${ticket_id}')">Delete</button></td>
+                <td><button onclick="list_consumed('${ticket_id}')">Consumed</button></td>
                 <td>${ticket_id}</td>
                 <td>${description}</td>
                 <td>${service_group}</td>
@@ -167,110 +195,93 @@
         }).then(res => console.log(res));
     }
 
+    let currentConsumeDisplay = '';
+    function list_consumed(ticket_id) {
+        if (currentConsumeDisplay !== ticket_id) {
+            consumed_tickets.innerHTML = /*html*/`
+                <tr>
+                    <th>Time</th>
+                    <th>User</th>
+                    <th>Service</th>
+                    <th>Subscription</th>
+                </tr>`;
+            currentConsumeDisplay = ticket_id;
+        }
+
+        skapi.getTickets({
+            service: 'eu71zettahertzesskpi',
+            ticket_id: '#' + ticket_id + '#'
+        }).then(tickets => {
+            console.log(tickets);
+            currentConsumeDisplay = ticket_id;
+            for (let t of tickets.list) {
+                let user_id = t.user_id;
+                let timestamp = t.stmp;
+                let subscription_id = t.placeholder.SUBSCRIPTION_ID;
+                let service_id = t.placeholder.SERVICE_ID;
+
+                let row = /*html*/`
+                    <td>${Date(timestamp).toLocaleString().split(' GMT')[0]}</td>
+                    <td>${user_id}</td>
+                    <td>${service_id}</td>
+                    <td>${subscription_id}</td>
+                    `;
+                let tr = document.createElement('tr');
+                tr.innerHTML = row;
+                consumed_tickets.appendChild(tr);
+            }
+        });
+    }
+
     function registerTicket(event) {
         event.preventDefault();
         const desc = document.getElementById('desc').value;
         const group = document.getElementById('group').value;
-        // serviceId: string,
-        // params: {
-        //     ticket_id: string;
-        //     condition?: {
-        //         user?: {
-        //             [key: string]: {
-        //                 value: string;
-        //                 operator: 'gt' | 'gte' | 'lt' | 'lte' | 'eq' | 'ne' | '>' | '>=' | '<' | '<=' | '=' | '!=';
-        //             };
-        //         },
-        //         record_access?: string; // record id user should have access to
-        //         request?: {
-        //             url: string;
-        //             method: 'GET' | 'POST';
-        //             headers?: {
-        //                 [key: string]: string;
-        //             };
-        //             data?: Record<string, any>;
-        //             params?: Record<string, any>;
-        //             match: {
-        //                 target_key: string; // key.to.match
-        //                 operator: 'gt' | 'gte' | 'lt' | 'lte' | 'eq' | 'ne' | '>' | '>=' | '<' | '<=' | '=' | '!=';
-        //                 value: string;
-        //             }[];
-        //         }
-        //     };
-        //     action?: {
-        //         access_group: number; // group number to give access to the user
-        //         record_access?: string; // record id to give access to the user
-        //         request?: {
-        //             url: string;
-        //             method: 'GET' | 'POST';
-        //             headers?: {
-        //                 [key: string]: string;
-        //             };
-        //             data?: Record<string, any>;
-        //             params?: Record<string, any>;
-        //         },
-        //         upgrade_service?: number; // only admin
-        //     };
-        //     desc: string;
-        //     count?: number;
-        //     time_to_live?: number;
-        // }
 
         let product = {
-            trial: 'price_1OeZQiHfHjKTnB39dWTj24Xl',
             standard: 'price_1OUCt6HfHjKTnB39IwJasJEy',
             premium: 'price_1OeZSqHfHjKTnB395Ai9fY4m'
         }
 
         let tid = document.getElementById('ticket_id').value;
-        skapi.registerTicket({
-            service: 'eu71zettahertzesskpi',
-            ticket_id: tid + '.delete',
-            condition: {
-                request: {
-                    url: 'https://api.stripe.com/v1/subscriptions/$SUBSCRIPTION_ID',
-                    method: 'DELETE',
-                    headers: {
-                        Authorization: `Bearer ${document.getElementById('secret').value}`
-                    },
-                }
+        let srvc_grp = parseInt(group); // 0 is delete
+
+        let match = [
+            {
+                target_key: 'metadata.service',
+                operator: '=',
+                value: '$SERVICE_ID'
+            }
+        ];
+
+        let request = {
+            url: 'https://api.stripe.com/v1/subscriptions/$SUBSCRIPTION_ID',
+            method: srvc_grp ? 'GET' : 'DELETE',
+            headers: {
+                Authorization: `Bearer ${document.getElementById('secret').value}`
             },
-            action: {
-                update_service: { group: parseInt(group), action: -1 }
-            },
-            desc
-        }).then(res => {
-            console.log(res);
-        }).catch(err => {
-            alert(err.message);
-        });
+            match
+        };
+
+        if (product[tid]) {
+            request.match.push({
+                target_key: 'plan.id',
+                operator: '=',
+                value: product[tid]
+            });
+        }
+        else if (!srvc_grp) {
+            request.params = {
+                prorate: true
+            }
+        }
 
         skapi.registerTicket({
             service: 'eu71zettahertzesskpi',
             ticket_id: tid,
-            condition: {
-                request: {
-                    url: 'https://api.stripe.com/v1/subscriptions/$SUBSCRIPTION_ID',
-                    method: 'GET',
-                    headers: {
-                        Authorization: `Bearer ${document.getElementById('secret').value}`
-                    },
-                    match: [
-                        {
-                            target_key: 'metadata.service',
-                            operator: '=',
-                            value: '$SERVICE_ID'
-                        },
-                        {
-                            target_key: 'plan.id',
-                            operator: '=',
-                            value: product[tid]
-                        },
-                    ]
-                }
-            },
+            condition: {request},
             action: {
-                update_service: { group: parseInt(group), action: 1 }
+                update_service: {group: srvc_grp, action: 1}
             },
             desc
         }).then(res => {
@@ -282,7 +293,8 @@
 </script>
 <style>
     body {
-        max-width: 1000px;
+        display: block;
+        max-width: 1200px;
         margin: auto;
         padding: 8px;
         box-sizing: border-box;
