--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
       However, the landscape has drastically changed. The advent of cloud computing, no-code/low-code solutions, and a
       variety of frameworks was meant to streamline development. Ironically, this evolution introduced more complexity.
       Developers are now faced with navigating through multiple frameworks, dealing with complex server configurations,
-      and
-      often requiring expert intervention during deployment.
+      and often requiring expert intervention during deployment.
 
       <br>
       <br>
