--- a/admin/index.html
+++ b/admin/index.html
@@ -9,7 +9,13 @@
     const skapi = new Skapi("ap220VneiKiyIzgLeFEc", "f8e16604-69e4-451c-9d90-4410f801c006");
 </script>
 <main id="menu" hidden>
+    <style>
+        main {
+            width: 400px;
+        }
+    </style>
     <h2 style="margin: 0">Skapi Admin Page</h2>
+    <hr>
     <ul>
         <li>
             <a href="/admin/info.html">Skapi Information</a>
