--- a/index.html
+++ b/index.html
@@ -9,169 +9,183 @@
   const skapi = new Skapi("ap220VneiKiyIzgLeFEc", "f8e16604-69e4-451c-9d90-4410f801c006");
 </script>
 
-<main>
+<br>
+<br>
+
+broadway Inc.
+
+<article>
+
+  <h1>Complexity of Modern Web Development</h1>
+
+  <p>
+    Web development was once straightforward: code a server, deploy it, and let it interact directly with users.
+    The code, data, and files were all in one place.
+
+    <br>
+    <br>
+
+    However, the landscape has drastically changed.
+    <br>
+    <br>
+
+    The advent of cloud computing, no-code/low-code solutions, and a
+    variety of frameworks was meant to streamline development.
+    
+    <br>
+    <br>
+
+    Ironically, this evolution introduced more complexity.
+    Developers are now faced with navigating through multiple frameworks, dealing with complex server configurations,
+    and often requiring expert intervention during deployment.
+
+    <br>
+    <br>
+
+    At Broadway Inc., we've envisioned a different approach – one that simplifies solutions in modern web development
+    without compromising capabilities.
+  </p>
   <br>
+  <h2>
+    Back to Basics with HTML
+  </h2>
+  <p>
+    Websites work best when they're built with static HTML. Nowadays, lots of cloud services let you host your HTML,
+    and
+    modern browsers are great at running complex JavaScript code.
+    <br>
+    <br>
+    Hence, it seems we don't really need servers to render HTML anymore.
+    We are living in an age where we have tons of SPA frameworks to do that, yet we still see a lot flocking back to
+    SSR using SPA frameworks, making it no different than PHP.
+    <br>
+    <br>
+    This trend persists mainly because, despite significant advancements on the frontend, the approach to structuring
+    backend servers hasn't changed much.
+    <br>
+    <br>
+    We want to change that.
+    <br>
+    <br>
+    By reimagining how backend servers are constructed, we seek to simplify the process of web development,
+    even for those based on static HTML.
+  </p>
+
+  <h4>
+    Embracing Serverless Technologies
+  </h4>
+
+  <p>
+    We distilled backend servers only to their essence: serving user requests securely and efficiently.
+    By harnessing serverless technologies, we can do this while eliminating the need for conventional server
+    management.
+  </p>
+
+  <h4>
+    Leveraging Existing Cloud Services
+  </h4>
+
+  <p>
+    Many cloud services have already solved numerous problems in modern web development.
+    The real challenge was integrating these services into a usable server.
+    <br>
+    <br>
+    We've streamlined this process by interconnecting these services using serverless lambda functions,
+    freeing developers from the complexities of cloud service configurations.
+  </p>
+
+  <h4>
+    Redefining the Database
+  </h4>
+
+  <p>
+    Traditional databases often come with complex designs, strict security measures, and detailed indexing strategies.
+    <br>
+    <br>
+    We're changing this paradigm by introducing a user-centric database model.
+    <br>
+    <br>
+    Based on key-value stores and advanced techniques using lexicographical sorting, we've made it possible for users
+    to
+    determine their data structures, security levels, and indexing of their data.
+    <br>
+    <br>
+    We believe the user is the owner of their data, and should be the
+    one to decide how their data should be stored and accessed. This shift removes the prerequisite of designing
+    database
+    schemas from the backend, also assuring security and flexibility with high performance.
+  </p>
+
   <br>
-  <article>
-    broadway Inc.
 
-    <h1>Complexity of Modern Web Development</h1>
+  <h2>Introducing Skapi: Backend API Library for Frontend HTML</h2>
 
-    <p>
-      Web development was once straightforward: code a server, deploy it, and let it interact directly with users.
-      Everything, including code, data, and files, was centralized.
-
-      <br>
-      <br>
-
-      However, the landscape has drastically changed. The advent of cloud computing, no-code/low-code solutions, and a
-      variety of frameworks was meant to streamline development. Ironically, this evolution introduced more complexity.
-      Developers are now faced with navigating through multiple frameworks, dealing with complex server configurations,
-      and often requiring expert intervention during deployment.
-
-      <br>
-      <br>
-
-      At Broadway Inc., we've envisioned a different approach – one that simplifies solutions in modern web development
-      without compromising capabilities.
-    </p>
+  <p>
+    In alignment with our vision, we have developed Skapi, a frontend JavaScript library that connects you to our
+    robust
+    serverless API solutions. Skapi empowers you to create full-stack web applications directly within your HTML
+    environment.
     <br>
-    <h2>
-      Back to Basics with HTML
-    </h2>
-    <p>
-      Websites work best when they're built with static HTML. Nowadays, lots of cloud services let you host your HTML,
-      and
-      modern browsers are great at running complex JavaScript code.
-      <br>
-      <br>
-      Hence, it seems we don't really need servers to render HTML anymore.
-      We are living in an age where we have tons of SPA frameworks to do that, yet we still see a lot flocking back to
-      SSR
-      using SPA frameworks, making it no different than PHP.
-      This trend persists mainly because, despite significant advancements on the frontend, the approach to structuring
-      backend servers hasn't changed much.
-      <br>
-      <br>
-      We want to change that.
-      <br>
-      <br>
-      By reimagining how backend servers are constructed, we seek to simplify the process of web development,
-      even for those based on static HTML.
-    </p>
-
-    <h4>
-      Embracing Serverless Technologies
-    </h4>
-
-    <p>
-      We distilled backend servers only to their essence: serving user requests securely and efficiently.
-      By harnessing serverless technologies, we can do this while eliminating the need for conventional server
-      management.
-    </p>
-
-    <h4>
-      Leveraging Existing Cloud Services
-    </h4>
-
-    <p>
-      Many cloud services have already solved numerous problems in modern web development.
-      The real challenge was integrating these services into a usable server.
-      <br>
-      <br>
-      We've streamlined this process by interconnecting these services using serverless lambda functions,
-      freeing developers from the complexities of cloud service configurations.
-    </p>
-
-    <h4>
-      Redefining the Database
-    </h4>
-
-    <p>
-      Traditional databases often come with complex designs, strict security measures, and detailed indexing strategies.
-      <br>
-      <br>
-      We're changing this paradigm by introducing a user-centric database model.
-      <br>
-      <br>
-      Based on key-value stores and advanced techniques using lexicographical sorting, we've made it possible for users
-      to
-      determine their data structures, security levels, and indexing of their data.
-      <br>
-      <br>
-      We believe the user is the owner of their data, and should be the
-      one to decide how their data should be stored and accessed. This shift removes the prerequisite of designing
-      database
-      schemas from the backend, also assuring security and flexibility with high performance.
-    </p>
-
     <br>
-
-    <h2>Introducing Skapi: Backend API Library for Frontend HTML</h2>
-
-    <p>
-      In alignment with our vision, we have developed Skapi, a frontend JavaScript library that connects you to our
-      robust
-      serverless API solutions. Skapi empowers you to create full-stack web applications directly within your HTML
-      environment.
-      <br>
-      <br>
-      Say goodbye to the complexities of configuration, database design, and server deployment.
-      Skapi streamlines your development, letting you focus solely on building.
-      <br>
-      <br>
-      Skapi comes packed with a comprehensive array of features, including user security, CDN, databases, email servers,
-      file storage, real-time data, and much more – all integrated seamlessly and accessible directly from your
-      frontend.
-      <br>
-      <br>
-      Compatible with vanilla HTML and various frontend frameworks, Skapi guarantees that your HTML and JavaScript are
-      the
-      only tools required to develop a sophisticated and robust web service.
-    </p>
-    <p>
-      Discover Skapi at <a href="https://www.skapi.com" target="_blank">www.skapi.com</a>.
-    </p>
+    Say goodbye to the complexities of configuration, database design, and server deployment.
+    Skapi streamlines your development, letting you focus solely on building.
     <br>
-    <p>
-      Founder: Baksa Gimm
-      <br>
-      Find me on <a href="https://twitter.com/baksagimm" target="_blank">X</a> | <a
-        href="https://www.linkedin.com/in/baksa-gimm-94122877/" target="_blank">LinkedIn</a> | <a
-        href="https://www.instagram.com/baksagimm" target="_blank">Instagram</a>
-      <br>
-    </p>
     <br>
-  </article>
+    Skapi comes packed with a comprehensive array of features, including user security, CDN, databases, email servers,
+    file storage, real-time data, and much more – all integrated seamlessly and accessible directly from your
+    frontend.
+    <br>
+    <br>
+    Compatible with vanilla HTML and various frontend frameworks, Skapi guarantees that your HTML and JavaScript are
+    the
+    only tools required to develop a sophisticated and robust web service.
+  </p>
+  <p>
+    Discover Skapi at <a href="https://www.skapi.com" target="_blank">www.skapi.com</a>.
+  </p>
+  <br>
+  <p>
+    Founder: Baksa Gimm
+    <br>
+    Find me on <a href="https://twitter.com/baksagimm" target="_blank">X</a> | <a
+      href="https://www.linkedin.com/in/baksa-gimm-94122877/" target="_blank">LinkedIn</a> | <a
+      href="https://www.instagram.com/baksagimm" target="_blank">Instagram</a>
+    <br>
+  </p>
+  <br>
+</article>
 
-  <hr>
-  
-  <section>
-    <h2>Subscribe to our Newsletter</h2>
-    <p>
-      Be the first to know about our new services, updates, and special offers.
-    </p>
-    <form onsubmit="disableForm(this);skapi.subscribeNewsletter(event).then(res => alert('Thank you for subscribing to our newsletters.'))">
-      <input hidden name="redirect" value="/ns-subscribed.html" />
-      <input hidden name="group" value="public" />
+<hr>
 
-      <span class="input-field">
-        <input type="email" name="email" placeholder='your@email.com' required /><span class="embed right">
-          <input class='button' type="submit" value="Subscribe" />
-        </span>
-        <span class="styler"></span>
+<section>
+  <h2>Subscribe to our Newsletter</h2>
+  <p>
+    Be the first to know about our new services, updates, and special offers.
+  </p>
+  <form onsubmit="disableForm(this);skapi.subscribeNewsletter(event).then(res => alert(res.split(': ')[1]))">
+    <input hidden name="redirect" value="/ns-subscribed.html" />
+    <input hidden name="group" value="public" />
+
+    <span class="input-field">
+      <input type="email" name="email" placeholder='your@email.com' required /><span class="embed right">
+        <input class='button' type="submit" value="Subscribe" />
       </span>
-    </form>
-    <br>
-    <br>
-    <br>
-    <br>
-    <small>broadway Inc. Location: 101-3302, 109 Mapo-daero, Mapo-gu, Seoul, 04146, Republic of Korea</small>
-  </section>
-</main>
+      <span class="styler"></span>
+    </span>
+  </form>
+</section>
+
+<br>
+<br>
+
+<footer>
+  broadway Inc. Location: 101-3302, 109 Mapo-daero, Mapo-gu, Seoul, 04146, Republic of Korea
+</footer>
 <style>
-  main {
-    width: 1000px;
+  body {
+    display: block;
+    margin: auto;
+    max-width: 1200px;
   }
 
   form {
